fixed page overflow

--- a/src/App.less
+++ b/src/App.less
@@ -91,7 +91,8 @@ a{
 .App {
     height: 100vh;
     width: 100vw;
-    overflow: auto;
+    overflow-y: auto;
+    overflow-x: hidden;
 }
 
 .small{
